-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Fully Compatible
-
ALL
-
Execution Team 2020-11-02
-
13
-
None
-
None
-
None
-
None
-
None
-
None
-
None
createSystemIndexes fasserts on errors, but it is possible for a WriteConflictException to return from createIndexesOnEmptyCollection. In the event of a WCE, the caller needs to be able to retry the entire operation. Currently, this crashes the server.
The purpose of the fatal assertion appears to be to ensure all system indexes are built in a transactional way with the collection creation. We can make a similar assertion by asserting that createSystemIndexes is called inside of a WriteUnitOfWork.