SERVER-50031 createSystemIndexes should allow WriteConflictExceptions to escape