src/mongo/db/system_index.cpp
@@ -41,6 +41,7 @@
 #include "mongo/db/catalog/commit_quorum_options.h"
 #include "mongo/db/catalog/index_catalog.h"
 #include "mongo/db/catalog/index_key_validate.h"
+#include "mongo/db/concurrency/write_conflict_exception.h"
 #include "mongo/db/db_raii.h"
 #include "mongo/db/index/index_descriptor.h"
 #include "mongo/db/index_builds_coordinator.h"
@@ -220,6 +221,8 @@ void createSystemIndexes(OperationContext* opCtx, CollectionWriter& collection) 
         try {
             IndexBuildsCoordinator::get(opCtx)->createIndexesOnEmptyCollection(
                 opCtx, collection, {indexSpec}, fromMigrate);
+        } catch (WriteConflictException&) {
+            throw;
         } catch (DBException& ex) {
             fassertFailedWithStatus(40456, ex.toStatus());
         }
